# Intelligent_Driving_Scene_Analyzer

./: .gitignore  README.md  pyproject.toml  pytest.ini  requirements.txt
.github/workflows/: streamlit_app.yml
App/: streamlit_app.py
App/pages/: 1_Model_Comparison.py
App/repositories/: model_catalog_repository.py
App/services/: analysis_session_service.py  dashboard_metrics.py  image_annotation_service.py  model_catalog_service.py  pipeline_contracts.py  pipeline_runner.py
App/tests/: test_streamlit_app.py
App/ui/: dashboard.py  image_panels.py  model_comparison_page.py  model_comparison_report.py  page.py  report.py  results.py  styles.py  upload.py
Intelligent_Driving_Scene_Analyzer.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
cv_module/: README_test.md  evaluate.py  infer.py  model_utils.py  prepare_bdd100k.py  test_infer.py  train.py
data/: README_data.md  augmentation.py  filter_scenario.py  prepare_dataset.py  split_dataset.py
llm_agent/: README.md  README_LLM.md  __init.py__  __init__.py  agent.py  formatter.py  prompt_builder.py  risk_rules.py  simulated_scenes.py  test_demo.py  tools.py
llm_agent/examples/: test_all_scenes.py  test_api_quick.py
llm_agent/scripts/: README.md  __init__.py  batch_analyzer.py  interactive_tester.py
llm_agent/tests/: README.md  __init__.py  conftest.py  test_agent.py  test_agent_mock.py  test_api_openai.py  test_demo.py  test_tools.py  (+4 more)
notebooks/: error_analysis.ipynb  exploration.ipynb  training_analysis.ipynb
pipeline/: __init__.py  model_catalog_schema.py  orchestrator.py  preprocess.py  schema.py
(+9 files in other folders)
