[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"


[project]
name = "Intelligent_Driving_Scene_Analyzer"
version = "0.1.0"
dependencies = [
    "streamlit",
    "pillow"
]
requires-python = ">=3.8"

authors = [
    { name="Lege Hugo", email="legehugo@gmail.com"}
]

[project.urls]
Repository = "https://github.com/HxgoL/Intelligent_Driving_Scene_Analyzer.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["pipeline*", "cv_module*", "App*", "llm_agent*","data*"]
